--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,4 +14,5 @@ recursive-include arartekomaps *.js
 recursive-include arartekomaps *.png
 recursive-include arartekomaps *.po
 recursive-include arartekomaps *.txt
+recursive-include arartekomaps *.mo
 
