--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ global-exclude *pyc
 global-exclude *~
 global-exclude local_settings.py
 global-exclude server_settings.py
+global-excude *.save
 include *.md
 recursive-include arartekomaps *.css
 recursive-include arartekomaps *.csv
